--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,12 @@ pipex_by_eerika
 .DS_Store
 Minishell.pdf
 transletions.txt
+.objs
+minishell
+libft/*.o
+libft/*.a
+1sig.c
+2sig.c
+redirect.c
+signal.c
+utils_5.c
